--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "axios": "^1.7.1",
+    "chart.js": "^4.4.3",
     "vue": "^3.4.21",
+    "vue-chartjs": "^5.3.1",
     "vue-router": "^4.0.13",
     "vuex": "^4.0.2"
   },
