--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@heroicons/vue": "^2.1.3",
     "axios": "^1.7.1",
     "chart.js": "^4.4.3",
     "vue": "^3.4.21",
