--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@heroicons/vue": "^2.1.3",
     "axios": "^1.7.1",
     "chart.js": "^4.4.3",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.1",
     "vue": "^3.4.21",
     "vue-chartjs": "^5.3.1",
     "vue-router": "^4.0.13",
